Create Swagger documentation
